--- a/RUP/src/rup/mainForm.form
+++ b/RUP/src/rup/mainForm.form
@@ -27,80 +27,99 @@
   <Layout>
     <DimensionLayout dim="0">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
-                      <Component id="srch" min="-2" pref="596" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="38" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="615" pref="615" max="-2" attributes="0"/>
+                              <Component id="hyp" min="-2" pref="136" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="37" pref="37" max="-2" attributes="0"/>
+                              <Component id="srch" min="-2" pref="596" max="-2" attributes="0"/>
+                              <EmptySpace min="38" pref="38" max="-2" attributes="0"/>
+                              <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                      <Component id="pic" min="-2" pref="55" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" attributes="0">
+                      <EmptySpace min="37" pref="37" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lb1" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb5" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb9" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lb2" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb6" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb10" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lb3" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb7" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb11" alignment="0" min="-2" pref="124" max="-2" attributes="0"/>
-                      </Group>
-                      <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="lb12" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb8" min="-2" pref="124" max="-2" attributes="0"/>
-                          <Component id="lb4" min="-2" pref="124" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <Component id="lb1" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="41" pref="41" max="-2" attributes="0"/>
+                              <Component id="lb2" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="44" pref="44" max="-2" attributes="0"/>
+                              <Component id="lb3" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="42" pref="42" max="-2" attributes="0"/>
+                              <Component id="lb4" min="-2" pref="124" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="lb5" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="41" pref="41" max="-2" attributes="0"/>
+                              <Component id="lb6" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="44" pref="44" max="-2" attributes="0"/>
+                              <Component id="lb7" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="42" pref="42" max="-2" attributes="0"/>
+                              <Component id="lb8" min="-2" pref="124" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="lb9" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="41" pref="41" max="-2" attributes="0"/>
+                              <Component id="lb10" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="44" pref="44" max="-2" attributes="0"/>
+                              <Component id="lb11" min="-2" pref="124" max="-2" attributes="0"/>
+                              <EmptySpace min="42" pref="42" max="-2" attributes="0"/>
+                              <Component id="lb12" min="-2" pref="124" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="38" max="32767" attributes="0"/>
-          </Group>
-          <Group type="102" alignment="1" attributes="0">
-              <EmptySpace max="32767" attributes="0"/>
-              <Component id="hyp" min="-2" pref="136" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+              <EmptySpace pref="35" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Group type="102" alignment="0" attributes="0">
-              <Component id="hyp" min="-2" pref="27" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="srch" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+          <Group type="102" attributes="0">
+              <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                  <Group type="102" attributes="0">
+                      <Component id="hyp" min="-2" pref="27" max="-2" attributes="0"/>
+                      <EmptySpace min="6" pref="6" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="jButton1" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                          <Component id="srch" alignment="3" min="-2" pref="34" max="-2" attributes="0"/>
+                      </Group>
+                  </Group>
+                  <Group type="102" attributes="0">
+                      <EmptySpace min="9" pref="9" max="-2" attributes="0"/>
+                      <Component id="pic" max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lb1" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb2" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb3" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb4" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
+              <EmptySpace min="61" pref="61" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="lb1" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb2" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb3" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb4" min="-2" pref="174" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lb5" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb6" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb7" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb8" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
+              <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="lb5" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb6" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb7" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb8" min="-2" pref="174" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace type="separate" max="-2" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="lb9" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb10" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb11" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
-                  <Component id="lb12" alignment="3" min="-2" pref="174" max="-2" attributes="0"/>
+              <EmptySpace min="18" pref="18" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
+                  <Component id="lb9" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb10" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb11" min="-2" pref="174" max="-2" attributes="0"/>
+                  <Component id="lb12" min="-2" pref="174" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="48" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -192,6 +211,11 @@
         <EventHandler event="mouseEntered" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hypMouseEntered"/>
         <EventHandler event="mouseExited" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="hypMouseExited"/>
       </Events>
+    </Component>
+    <Component class="javax.swing.JLabel" name="pic">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jLabel1"/>
+      </Properties>
     </Component>
   </SubComponents>
 </Form>
